--- a/javaws/qqplugin/.classpath
+++ b/javaws/qqplugin/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="E:/Desktop/javaws/qqplugin/spigot-1.10-R0.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="E:/刘晨旭/作品/exe作品/qq-replay-addon/javaws/qqplugin/spigot-1.10-R0.1-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
