--- a/Flexlive.CQP.PluginSolution/src/Flexlive.CQP.CSharpPlugins.Demo/Flexlive.CQP.CSharpPlugins.Demo.csproj
+++ b/Flexlive.CQP.PluginSolution/src/Flexlive.CQP.CSharpPlugins.Demo/Flexlive.CQP.CSharpPlugins.Demo.csproj
@@ -41,6 +41,9 @@
     <Reference Include="Flexlive.CQP.Framework">
       <HintPath>..\..\Libs\Flexlive.CQP.Framework.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.10.0.3\lib\net35\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -65,6 +68,9 @@
     <EmbeddedResource Include="FormSettings.resx">
       <DependentUpon>FormSettings.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
