--- a/Flexlive.CQP.PluginSolution/src/Flexlive.CQP.CSharpPlugins.Demo/Flexlive.CQP.CSharpPlugins.Demo.csproj
+++ b/Flexlive.CQP.PluginSolution/src/Flexlive.CQP.CSharpPlugins.Demo/Flexlive.CQP.CSharpPlugins.Demo.csproj
@@ -72,6 +72,11 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="dic.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy  /C /I /R /Y  $(TargetPath) $(TargetDir)CSharpPlugins\
